[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "violent-behavior-predictor"
version = "0.1.0"
description = "Hierarchical risk prediction for violent behavior with fusion."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Anonymous" }]
keywords = ["mental-health", "risk-prediction", "healthcare", "machine-learning"]
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "statsmodels>=0.14.0",
  "scikit-learn>=1.3.0",
  "imbalanced-learn>=0.11.0",
  "joblib>=1.3.0",
]

[project.urls]
Homepage = "https://example.com"

[project.scripts]
vbp = "cli:main"


